# mathdb

./: .gitignore  CMakeLists.txt  Makefile  fuzztest.c  makefile  mdb_all_generic_map.h  mdb_all_multiset.h  mdb_all_vector.h  mdb_alloc_mem.h  mdb_base.h  mdb_create_node_map.h  mdb_debug.h  mdb_edit_graph.h  mdb_error.h  mdb_free_node_map.h  mdb_generic_map.c  mdb_generic_map.h  mdb_get_error.h  mdb_get_mem_info.h  mdb_global.h  mdb_graph.c  mdb_graph.h  mdb_manage.h  mdb_mem.c  mdb_multiset.c  mdb_node_map.c  mdb_node_map.h  mdb_read_graph.h  mdb_read_map.h  mdb_read_node_map.h  mdb_search_graph.c  mdb_search_graph.h  mdb_simple_graph.c  mdb_use_node_map.h  mdb_util.c  mdb_util.h  mdb_vector.c  test.c  unittest.c
vs/mathdb/: mathdb.sln
vs/mathdb/mathdb/: makefile  mathdb.vcxproj  mathdb.vcxproj.filters
